styles/styles.css
.nav {
  font-family: 'Lato', sans-serif;
  font-size: 1.1rem; }
  .nav a {
    display: inline-block;
    color: #fff;
    text-decoration: none; }

.nav-icon {
  color: #fff;
  font-size: 4rem; }
  .nav-icon--closed {
    color: #fff;
    font-size: 4rem; }

.main-heading--primary {
  font-family: 'Bree Serif', serif;
  text-align: center;
  text-transform: uppercase;
  color: #FFFCFC;
  font-weight: 50;
  font-size: 4rem; }

.main-menu {
  font-family: 'Open Sans', sans-serif;
  color: #505050; }
  .main-menu__heading--primary {
    font-family: 'Bree Serif', serif;
    margin-top: 5rem;
    font-size: 2.5rem; }
    .main-menu__heading--primary__column {
      font-size: 2rem; }

.column__heading {
  font-family: 'Lato', sans-serif;
  color: #945679;
  padding: 2rem 0 0 0;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 1.4rem;
  margin-bottom: 0; }

.column__list {
  list-style-type: none;
  line-spacing: 300; }

.carousel-heading--main {
  font-family: 'Bree Serif', serif;
  color: #FBFCF8;
  font-size: 4rem;
  text-align: center;
  padding-top: 2rem; }

.carousel-heading--sub {
  font-family: 'Open Sans', sans-serif;
  color: #fff;
  padding-bottom: 2rem;
  margin-top: 5rem;
  text-align: center;
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: .5rem; }

.flex-right-col h2 {
  margin-top: -.4rem;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  text-transform: uppercase;
  color: #945679;
  font-size: 2rem;
  line-height: 1.8; }
  .flex-right-col h2 p {
    text-align: left;
    width: 100%;
    margin-top: -.4rem;
    font-family: 'Open Sans', sans-serif;
    color: grey;
    font-weight: 300;
    font-size: 1.5rem;
    line-height: 2.2; }

.menu-link a {
  font-size: 1.5rem; }

.btn--purple {
  font-family: 'Lato', sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  color: white; }

.promo__column--left span {
  font-size: 1rem; }

.gallery a {
  text-decoration: none; }

.gallery__heading {
  font-family: 'Lato', sans-serif;
  font-size: 2rem;
  padding: 3rem;
  text-align: center;
  color: orange; }

.main-footer__columns {
  font-family: 'Open Sans', sans-serif;
  font-size: 2rem;
  color: #fff;
  font-size: 1.5rem;
  line-height: 2; }

.main-footer__columns-heading {
  font-size: 2.5rem; }

.main-footer__icons a {
  color: #fff;
  font-size: 3rem; }

.arrow--left {
  position: absolute;
  background-color: grey;
  color: whitesmoke;
  font-size: 2rem;
  border-radius: 100%;
  padding: 1.7rem;
  top: 38%;
  left: 3.7%;
  z-index: 2;
  opacity: .8; }
  .arrow--left:hover {
    opacity: 1; }

.arrow--right {
  position: absolute;
  background-color: grey;
  color: whitesmoke;
  font-size: 2rem;
  border-radius: 100%;
  padding: 1.7rem;
  top: 38%;
  right: 1%;
  z-index: 2;
  opacity: .8; }
  .arrow--right:hover {
    opacity: 1; }

.btn--purple {
  margin-top: 1.5rem;
  padding-bottom: 4.5rem;
  text-align: center; }
  .btn--purple--purple:hover {
    color: black;
    background-color: lightgrey; }
    .btn--purple--purple:hover--purple a {
      background-color: #655A8F;
      border: .2rem solid black;
      border-radius: .5rem;
      display: inline-block;
      text-decoration: none;
      padding: 1rem 3rem; }
      .btn--purple--purple:hover--purple a--black {
        font-size: 1.4rem;
        border: none;
        margin-left: .3rem;
        padding: 1.5rem 3rem;
        background-color: #605052;
        color: white;
        display: inline; }

.carousel__slides {
  position: relative; }

.carousel__column--left,
.carousel__column--center,
.carousel__column--right {
  margin: 0 auto;
  width: 33.33%;
  height: 100%;
  float: left; }

.carousel__card {
  background-color: #D2E1D2;
  padding: 1rem 1rem;
  margin-left: 2rem;
  height: 31rem; }

.hidden {
  display: none; }

.images {
  position: relative;
  width: 100%;
  height: 50%; }

.carousel-card__image1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/coffee.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__image2 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../imgs/seeds.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__image3 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/brownie.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__image4 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/cake-pop.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__image5 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/treat.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__image6 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/smoothie.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.carousel-card__overlay {
  font-family: 'Lato', sans-serif;
  color: white;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%);
  font-size: 1.2rem;
  background: rgba(139, 131, 134, 0.41);
  height: 4rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center; }

.carousel-card__title {
  font-family: 'Open Sans', sans-serif;
  color: #569456;
  display: block;
  font-size: 1.1rem;
  font-weight: 600;
  padding: 1.5rem;
  line-height: 1.5;
  text-align: center; }

.carousel-card__details {
  font-family: 'Open Sans', sans-serif;
  color: #416F6F;
  margin: 0;
  line-height: 2;
  font-size: 1rem;
  font-weight: 300;
  text-align: center; }

.gallery-image-content {
  width: 100%;
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.gallery__image1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image1.jpeg"); }

.gallery__image2 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image2.jpeg"); }

.gallery__image3 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image3.jpeg"); }

.gallery__image4 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image4.jpeg"); }

.gallery__image5 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image5.jpeg"); }

.gallery__image6 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image6.jpeg"); }

.gallery__image7 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image7.jpeg"); }

.gallery__image8 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/image8.jpeg"); }

.input-box {
  font-style: italic;
  padding: 1.5rem .7rem;
  display: inline; }

.menu-link {
  font-family: 'Lato', sans-serif;
  font-size: 2rem;
  text-align: center;
  padding-bottom: 3rem; }
  .menu-link a {
    color: #fff;
    margin: 5rem;
    text-decoration: none;
    text-align: center;
    display: inline-block; }
    .menu-link a a:hover {
      color: #000; }

.underline {
  width: 25%;
  padding-top: 3.5rem;
  border-bottom: .2rem #945679 solid; }

.main-container {
  width: 80%;
  margin: 0 auto; }

.carousel-container {
  margin: 0 auto;
  overflow: hidden;
  width: 80%; }

.flex-container {
  text-align: center;
  margin: 7.5rem 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between; }

.flex-left-col {
  margin: 0 auto;
  width: 50rem;
  height: 50rem;
  max-width: 100%;
  flex-basis: 50%;
  opacity: 0; }
  .flex-left-col img {
    width: 50rem;
    height: 50rem;
    transition: opacity 1s ease-in-out; }

.flex-right-col {
  flex-basis: 50%;
  margin-left: 4rem;
  opacity: 0; }
  .flex-right-col h2 {
    margin-top: 50px; }
  .flex-right-col p {
    width: 80%;
    margin: 0 auto; }

.promo-flex-container {
  width: 70%;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between; }

.promo__column--left {
  background-color: #F5DEB3;
  font-family: 'Open Sans', sans-serif;
  text-transform: uppercase;
  color: brown;
  width: 50%;
  margin: 0 auto;
  text-align: center; }

.promo__heading {
  font-family: 'Bree Serif', serif;
  color: #332661;
  margin: 2rem 0;
  padding: 0 0 1.5rem 0;
  font-size: 2.8rem;
  text-align: center; }

.promo__column--left span {
  font-family: 'Open Sans', sans-serif;
  color: #000;
  line-height: 3;
  letter-spacing: .1rem;
  padding: 0 1.8rem; }

.promo__column--right {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/promoimg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 50%;
  padding: 1rem;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  text-transform: uppercase;
  margin: 0 auto;
  font-size: 1.3rem;
  line-height: 1.8; }

.menu-grid {
  margin: 0 auto;
  text-align: center;
  padding: 1.5rem;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr; }

.grid-wrapper {
  display: grid;
  grid-template-columns: 15rem 15rem  15rem  15rem;
  grid-template-rows: 15rem  15rem  15rem;
  grid-gap: .2rem;
  justify-content: center; }

.header {
  background: black;
  height: 90vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../imgs/header_background.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; }

.nav {
  background-color: #DBA0A0;
  height: 3vh;
  padding: 1.5rem 0;
  width: 100%;
  text-align: center; }
  .nav a {
    padding: 0 20px;
    transition: color .5s ease-in-out; }
    .nav a:hover {
      color: maroon; }

.nav-icon {
  display: none;
  position: absolute;
  top: 4px;
  left: 2.8rem; }
  .nav-icon--closed {
    position: absolute;
    top: 4px;
    left: 2.8rem;
    display: none;
    z-index: 3000; }

.mobile {
  background-color: #DBA0A0;
  width: 100%;
  height: 100%;
  text-align: center;
  margin-top: 0;
  position: absolute;
  display: none;
  z-index: 2000; }
  .mobile li {
    list-style-type: none;
    margin-top: 5rem;
    padding: 3rem 2rem; }
    .mobile li li a {
      font-family: 'Lato', sans-serif;
      font-size: 8rem;
      color: #fff;
      text-decoration: none; }

.main-heading--primary {
  margin-top: 0;
  padding-top: 13rem; }

.main-footer {
  text-align: left;
  margin-top: 10rem;
  height: 50rem;
  background-color: #DBA0A0;
  width: 100%; }

.main-footer__columns--left,
.main-footer__columns--center,
.main-footer__columns--right {
  width: 33.33%;
  float: left; }

.main-footer__column-heading {
  margin-bottom: 0; }

.main-footer__columns {
  padding: 1rem 12rem; }

.main-footer__columns-heading {
  color: #fff;
  font-size: 1.4rem;
  display: block; }

.main-footer__icons {
  padding: 1.5rem 0 0 1rem;
  font-size: 3rem; }

.main-footer__copy {
  margin-top: 8.5rem;
  font-size: 1.2rem; }

.carousel-section {
  width: 100%;
  background-color: #819999;
  position: relative; }

.main-menu {
  font-family: 'Open Sans', sans-serif;
  color: #505050;
  background-color: #fff;
  text-align: center;
  padding: 6.5rem; }

.promo {
  padding: .5rem; }

